# controller_input

./: .gitignore  README.md  pyproject.toml
copy/backend/: motor.py  tracker.py
copy/backend/motor_rust/src/: device.rs  engine.rs  lib.rs  state.rs
src/: gui_app.py  main.py  motor_app.py
src/backend/: inputs.py  motor.py  tracker.py
src/backend/motor_rust/: lib.rs  main.rs
src/backend/motor_rust/src/: engine.rs  filter.rs  physics.rs  state.rs
src/config/: config1.json
src/frontend/: hud.py  theme.py  tooltips.py  widgets.py
src/utils/: config.py  utils.py
