[project]
name = "controller-input"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.9.2",
    "keyboard>=0.13.5",
    "maturin>=1.10.2",
    "mediapipe>=0.10.31",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
]